change color button

--- a/investix/index.html
+++ b/investix/index.html
@@ -66,7 +66,7 @@
         <div class="slider__text">
           <h1 class="slider__title">Day Trading Education Package</h1>
           <p class="slider__desc">Pay only for trading education and receive<br>all the trading capital you need</p>
-          <a class="button button--small  slider__button" href="#">Get Started</a>
+          <a class="button  button--small  slider__button" href="#">Get Started</a>
         </div>
         <div class="slider__img"></div>
       </div>
@@ -84,7 +84,7 @@
           <p class="info__text">Enjoy extra income, and gain financial security by learning this great profession in our Day Trading Academy.</p>
           <p class="info__text">Since 2004, Tradenet live day trading academy has educated more than 30,000 professional traders worldwide.</p>
           <p class="info__text">You are welcome to select between our basic and advanced courses, or combine them in our world renowned Mentorship Program.</p>
-          <a class="button  button--small  info__button" href="#">Get Started</a>
+          <a class="button  button--small  button--green  info__button" href="#">Get Started</a>
         </div>
       </div>
     </div>
@@ -409,7 +409,7 @@
             <input class="contact__input  contact__input--phone" type="tel" name="Phone" placeholder="Phone">
           </div>
         </div>
-        <button class="button  button--big  contact__submit" type="submit" name="Submit">Submit</button>
+        <button class="button  button--big  button--green  contact__submit" type="submit" name="Submit">Submit</button>
       </form>
     </div>
   </section>
