--- a/investix/account-programs/intro.html
+++ b/investix/account-programs/intro.html
@@ -3,37 +3,36 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
-  <title>Investix</title>
-  <link rel="stylesheet" href="css/style.min.css">
+  <title>Intro Program - Investix</title>
+  <link rel="stylesheet" href="../css/style.min.css">
   <!-- Favicon -->
-  <link rel="icon" type="image/svg+xml" href="img/favicon/favicon.svg">
-  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="194x194" href="img/favicon/favicon-194x194.png">
-  <link rel="icon" type="image/png" sizes="192x192" href="img/favicon/android-chrome-192x192.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
-  <link rel="mask-icon" href="img/favicon/safari-pinned-tab.svg" color="#cd2122">
-  <link rel="manifest" href="site.webmanifest">
-  <meta name="msapplication-config" content="browserconfig.xml">
-  <meta name="msapplication-TileImage" content="img/favicon/mstile-144x144.png">
+  <link rel="icon" type="image/svg+xml" href="../img/favicon/favicon.svg">
+  <link rel="apple-touch-icon" sizes="180x180" href="../apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="194x194" href="../img/favicon/favicon-194x194.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="../img/favicon/android-chrome-192x192.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon/favicon-16x16.png">
+  <link rel="mask-icon" href="../img/favicon/safari-pinned-tab.svg" color="#cd2122">
+  <link rel="manifest" href="../site.webmanifest">
+  <meta name="msapplication-config" content="../browserconfig.xml">
+  <meta name="msapplication-TileImage" content="../img/favicon/mstile-144x144.png">
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="theme-color" content="#ffffff">
-  <!-- Slick -->
-  <link rel="stylesheet" href="js/slick/slick.css"/>
-  <link rel="stylesheet" href="js/slick/slick-theme.css"/>
 </head>
 <body>
   <header class="header">
     <div class="container">
       <div class="header__flex">
-        <img class="header__logo" src="img/logo.svg" alt="Investix">
+        <a class="header__link" href="../index.html">
+          <img class="header__logo" src="../img/logo.svg" alt="Investix">
+        </a>
         <button class="header__toggle  header__toggle--inactive" type="button"></button>
         <nav class="nav">
           <ul class="nav__list">
             <li>
               <a>Account Programs</a>
               <ul class="nav__sublist">
-                <li><a href="account-programs/intro.html">Intro Program</a></li>
+                <li><a class="nav__active">Intro Program</a></li>
                 <li><a href="#">Student Program</a></li>
                 <li><a href="#">Expert Program</a></li>
                 <li><a href="#">Pro Program</a></li>
@@ -60,36 +59,67 @@
       </div>
     </div>
   </header>
-  <section class="slider">
-    <div class="slider__box">
-      <div class="slider__container">
-        <div class="slider__text">
-          <h1 class="slider__title">Day Trading Education Package</h1>
-          <p class="slider__desc">Pay only for trading education and receive<br>all the trading capital you need</p>
-          <a class="button  button--small  slider__button" href="#">Get Started</a>
-        </div>
-        <div class="slider__img"></div>
+  <main class="account-programs">
+    <section class="account-programs__title">
+      <div class="container">
+        <h1 class="account-programs__name">Intro Program</h1>
       </div>
-    </div>
-    <div class="slider__box">
-      aaa
-    </div>
-  </section>
-  <section class="info">
-    <div class="container">
-      <div class="info__flex">
-        <div class="info__mockup"></div>
-        <div class="info__box">
-          <h1 class="info__title">Traders education at our<br>live trading academy</h1>
-          <p class="info__text">Enjoy extra income, and gain financial security by learning this great profession in our Day Trading Academy.</p>
-          <p class="info__text">Since 2004, Tradenet live day trading academy has educated more than 30,000 professional traders worldwide.</p>
-          <p class="info__text">You are welcome to select between our basic and advanced courses, or combine them in our world renowned Mentorship Program.</p>
-          <a class="button  button--small  button--green  info__button" href="#">Get Started</a>
+    </section>
+    <section class="account-programs__desc">
+      <div class="container">
+        <div class="account-programs__flex">
+          <div class="account-programs__left">
+            <h2 class="account-programs__name  account-programs__name--small">Professional Program 2018</h2>
+            <p class="account-programs__text">The $500 INTRO program has all you need to get started: Self-Study course, live Trading Chat Room where you can learn from professional traders and follow their trades, a trading book and the eligibility to apply for a funded $14,000 trading account.</p>
+            <p class="account-programs__price">Price <b>$349</b></p>
+            <small class="account-programs__guarantee">14-Day Full Money Back Guarantee!</small>
+            <a class="button  button--small  button--green  account-programs__button" href="#">Buy Now</a>
+          </div>
+          <div class="account-programs__right"></div>
         </div>
       </div>
-    </div>
-  </section>
-  <section class="services">
+    </section>
+    <section class="account-programs__edge">
+      <div class="container">
+        <div class="account-programs__flex">
+          <div class="account-programs__box  account-programs__box--self">
+            <b>Self-Study<br>Course</b>
+            <ul>
+              <li>- Online trading course</li>
+              <li>- Dozens of learning units</li>
+              <li>- Training videos</li>
+              <li>- Interactive sessions and tests</li>
+              <li>- Available 24/7</li>
+            </ul>
+          </div>
+          <div class="account-programs__box  account-programs__box--chat">
+            <b>Live Trading<br>Chat Room</b>
+            <ul>
+              <li>- Trade live with our top analysts</li>
+              <li>- Watch & Learn to improve your trading skills</li>
+              <li>- Copy-trade and learn better trading strategies</li>
+              <li>- 1-Month membership</li>
+            </ul>
+          </div>
+          <div class="account-programs__box  account-programs__box--book">
+            <b>Trading<br>Book</b>
+            <ul>
+              <li>- “The Market Whisperer” trading book, a best seller by Meir Barak, is included in this package. You will get online access to the book in eight different languages!</li>
+            </ul>
+          </div>
+          <div class="account-programs__box  account-programs__box--demo">
+            <b>Demo Training<br>Account</b>
+            <ul>
+              <li>- Proficient in the use of the trading platform</li>
+              <li>- Get familiar with advanced trading features</li>
+              <li>- Easily test all trading platform functions</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
+  <section class="services  services--account-programs">
     <div class="container">
       <h1 class="services__title">We will show you the way!</h1>
       <p class="services__subtitle">Our funded trading Account programs are designed to help you become a consistently profitable trader with the best education, but without the worry of losing your own capital.</p>
@@ -129,16 +159,12 @@
       </div>
     </div>
   </section>
-  <section class="live">
+  <section class="live  live--account-programs">
     <div class="container">
-      <div class="live__flex">
-        <div class="live__box">
-          <h1 class="live__title">Join our live<br>trading chat room</h1>
-          <p class="live__text">New to day trading? Looking to improve your skill set? Join us in our online Trading ChatRoom and allow Meir Barak and his team to be your personal mentors. Join hundreds of traders from different countries; learn and mirror the trades of some of the world’s leading day traders.</p>
-          <a class="button  button--medium  live__button" href="#">14 Days Free Trial</a>
-          <a class="button  button--medium  button--white  live__button" href="#">Read More</a>
-        </div>
-        <div class="live__mockup"></div>
+      <div class="live__box  live__box--account-programs">
+        <h1 class="live__title">Become a Funded Account Trader</h1>
+        <p class="live__text  live__text--account-programs">Pay only for your education, and have all the trading capital you need. You will be eligible to apply for a funded account of up to $240,000 and receive up to 85% of the net profits you generate. Our Funded Trading Account programs are designed to help you become a consistently profitable trader with the best education, but without the worry of losing your own capital.</p>
+        <a class="button  button--medium  live__button" href="#">Learn More</a>
       </div>
     </div>
   </section>
@@ -415,7 +441,9 @@
   </section>
   <footer class="footer">
     <div class="container">
-      <img class="footer__logo" src="img/logo-white.svg" alt="Investix">
+      <a href="../index.html">
+        <img class="footer__logo" src="../img/logo-white.svg" alt="Investix">
+      </a>
       <div class="footer__flex">
         <ul class="footer__list">
           <li><b>Education</b></li>
@@ -429,7 +457,7 @@
         </ul>
         <ul class="footer__list">
           <li><b>Funded Accounts</b></li>
-          <li><a href="#">Intro Program</a></li>
+          <li><a class="footer__active">Intro Program</a></li>
           <li><a href="#">Student Program</a></li>
           <li><a href="#">Expert Program</a></li>
           <li><a href="#">Pro Program</a></li>
@@ -473,10 +501,8 @@
       </div>
     </div>
   </footer>
-  <script src="js/jquery.min.js"></script>
-  <script src="js/jquery-plugins.js"></script>
-  <script src="js/slick/slick.min.js"></script>
-  <script src="js/slider.js"></script>
-  <script src="js/main.min.js" async></script>
+  <script src="../js/jquery.min.js"></script>
+  <script src="../js/jquery-plugins.js"></script>
+  <script src="../js/main.min.js" async></script>
 </body>
 </html>
