--- a/investix/index.html
+++ b/investix/index.html
@@ -34,7 +34,7 @@
               <a>Account Programs</a>
               <ul class="nav__sublist">
                 <li><a href="account-programs/intro.html">Intro Program</a></li>
-                <li><a href="#">Student Program</a></li>
+                <li><a href="account-programs/student.html">Student Program</a></li>
                 <li><a href="#">Expert Program</a></li>
                 <li><a href="#">Pro Program</a></li>
               </ul>
@@ -429,8 +429,8 @@
         </ul>
         <ul class="footer__list">
           <li><b>Funded Accounts</b></li>
-          <li><a href="#">Intro Program</a></li>
-          <li><a href="#">Student Program</a></li>
+          <li><a href="account-programs/intro.html">Intro Program</a></li>
+          <li><a href="account-programs/student.html">Student Program</a></li>
           <li><a href="#">Expert Program</a></li>
           <li><a href="#">Pro Program</a></li>
         </ul>
