--- a/investix/account-programs/student.html
+++ b/investix/account-programs/student.html
@@ -34,8 +34,8 @@
               <ul class="nav__sublist">
                 <li><a href="intro.html">Intro Program</a></li>
                 <li><a class="nav__active">Student Program</a></li>
-                <li><a href="#">Expert Program</a></li>
-                <li><a href="#">Pro Program</a></li>
+                <li><a href="expert.html">Expert Program</a></li>
+                <li><a href="pro.html">Pro Program</a></li>
               </ul>
             </li>
             <li>
@@ -479,8 +479,8 @@
           <li><b>Funded Accounts</b></li>
           <li><a href="intro.html">Intro Program</a></li>
           <li><a class="footer__active">Student Program</a></li>
-          <li><a href="#">Expert Program</a></li>
-          <li><a href="#">Pro Program</a></li>
+          <li><a href="expert.html">Expert Program</a></li>
+          <li><a href="pro.html">Pro Program</a></li>
         </ul>
         <ul class="footer__list">
           <li><b>About</b></li>
