--- a/investix/index.html
+++ b/investix/index.html
@@ -35,8 +35,8 @@
               <ul class="nav__sublist">
                 <li><a href="account-programs/intro.html">Intro Program</a></li>
                 <li><a href="account-programs/student.html">Student Program</a></li>
-                <li><a href="#">Expert Program</a></li>
-                <li><a href="#">Pro Program</a></li>
+                <li><a href="account-programs/expert.html">Expert Program</a></li>
+                <li><a href="account-programs/pro.html">Pro Program</a></li>
               </ul>
             </li>
             <li>
@@ -431,8 +431,8 @@
           <li><b>Funded Accounts</b></li>
           <li><a href="account-programs/intro.html">Intro Program</a></li>
           <li><a href="account-programs/student.html">Student Program</a></li>
-          <li><a href="#">Expert Program</a></li>
-          <li><a href="#">Pro Program</a></li>
+          <li><a href="account-programs/expert.html">Expert Program</a></li>
+          <li><a href="account-programs/pro.html">Pro Program</a></li>
         </ul>
         <ul class="footer__list">
           <li><b>About</b></li>
