--- a/investix/account-programs/expert.html
+++ b/investix/account-programs/expert.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
-  <title>Intro Program - Investix</title>
+  <title>Expert Program - Investix</title>
   <link rel="stylesheet" href="../css/style.min.css">
   <!-- Favicon -->
   <link rel="icon" type="image/svg+xml" href="../img/favicon/favicon.svg">
@@ -32,9 +32,9 @@
             <li>
               <a>Account Programs</a>
               <ul class="nav__sublist">
-                <li><a class="nav__active">Intro Program</a></li>
+                <li><a href="intro.html">Intro Program</a></li>
                 <li><a href="student.html">Student Program</a></li>
-                <li><a href="expert.html">Expert Program</a></li>
+                <li><a class="nav__active">Expert Program</a></li>
                 <li><a href="pro.html">Pro Program</a></li>
               </ul>
             </li>
@@ -62,7 +62,7 @@
   <main class="account-programs">
     <section class="account-programs__title">
       <div class="container">
-        <h1 class="account-programs__name">Intro Program</h1>
+        <h1 class="account-programs__name">Expert Program</h1>
       </div>
     </section>
     <section class="account-programs__desc">
@@ -70,12 +70,12 @@
         <div class="account-programs__flex">
           <div class="account-programs__left">
             <h2 class="account-programs__name  account-programs__name--small">Professional Program 2018</h2>
-            <p class="account-programs__text">The $349 INTRO program has all you need to get started: Self-Study course, live Trading Chat Room where you can learn from professional traders and follow their trades, a trading book and the eligibility to apply for a funded $14,000 trading account.</p>
-            <p class="account-programs__price">Price <b>$349</b></p>
+            <p class="account-programs__text">The $5,499 EXPERT Program includes everything in both the INTRO and STUDENT Programs, with 8 months of mentorship, plus the Star Trader Course and the ability to apply for a funded $160,000 trading account.</p>
+            <p class="account-programs__price">Price <b>$5499</b></p>
             <small class="account-programs__guarantee">14-Day Full Money Back Guarantee!</small>
             <a class="button  button--small  button--green  account-programs__button" href="#">Buy Now</a>
           </div>
-          <div class="account-programs__right  account-programs__right--intro"></div>
+          <div class="account-programs__right  account-programs__right--expert"></div>
         </div>
       </div>
     </section>
@@ -107,12 +107,42 @@
               <li>- “The Market Whisperer” trading book, a best seller by Meir Barak, is included in this package. You will get online access to the book in eight different languages!</li>
             </ul>
           </div>
+        </div>
+        <div class="account-programs__flex  account-programs__flex--second">
           <div class="account-programs__box  account-programs__box--demo">
             <b>Demo Training<br>Account</b>
             <ul>
               <li>- Proficient in the use of the trading platform</li>
               <li>- Get familiar with advanced trading features</li>
               <li>- Easily test all trading platform functions</li>
+            </ul>
+          </div>
+          <div class="account-programs__box  account-programs__box--mentor">
+            <b>1-Month<br>Mentorship</b>
+            <ul>
+              <li>- Weekly Mentorship Meeting</li>
+              <li>- Trading Room Live Mentoring</li>
+              <li>- Comprehensive Training Sessions</li>
+            </ul>
+          </div>
+          <div class="account-programs__box  account-programs__box--star">
+            <b>Star Trader<br>Course</b>
+            <ul>
+              <li>- 18-Hour Online Sessions</li>
+              <li>- Access to Recorded Materials</li>
+              <li>- Calculated Risk Trading</li>
+              <li>- Trading Room Live Mentoring</li>
+              <li>- Comprehensive Training Sessions</li>
+            </ul>
+          </div>
+        </div>
+        <div class="account-programs__flex  account-programs__flex--second  account-programs__flex--around">
+          <div class="account-programs__box  account-programs__box--forex">
+            <b>Forex Trader <br>Course</b>
+            <ul>
+              <li>- Three Live 3-hour Online Sessions</li>
+              <li>- Trading Room Live Mentoring</li>
+              <li>- Access to Recorded Materials</li>
             </ul>
           </div>
         </div>
@@ -457,9 +487,9 @@
         </ul>
         <ul class="footer__list">
           <li><b>Funded Accounts</b></li>
-          <li><a class="footer__active">Intro Program</a></li>
+          <li><a href="intro.html">Intro Program</a></li>
           <li><a href="student.html">Student Program</a></li>
-          <li><a href="expert.html">Expert Program</a></li>
+          <li><a class="footer__active">Expert Program</a></li>
           <li><a href="pro.html">Pro Program</a></li>
         </ul>
         <ul class="footer__list">
