--- a/investix/account-programs/account.html
+++ b/investix/account-programs/account.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
-  <title>Intro Program - Investix</title>
+  <title>Account Programs - Investix</title>
   <link rel="stylesheet" href="../css/style.min.css">
   <!-- Favicon -->
   <link rel="icon" type="image/svg+xml" href="../img/favicon/favicon.svg">
@@ -30,9 +30,9 @@
         <nav class="nav">
           <ul class="nav__list">
             <li>
-              <a class="nav__active" href="account.html">Account Programs</a>
+              <a class="nav__active">Account Programs</a>
               <ul class="nav__sublist">
-                <li><a class="nav__active">Intro Program</a></li>
+                <li><a href="intro.html">Intro Program</a></li>
                 <li><a href="student.html">Student Program</a></li>
                 <li><a href="expert.html">Expert Program</a></li>
                 <li><a href="pro.html">Pro Program</a></li>
@@ -62,112 +62,182 @@
   <main class="account-programs">
     <section class="account-programs__title">
       <div class="container">
-        <h1 class="account-programs__name">Intro Program</h1>
+        <h1 class="account-programs__name">Day Trading Education Packages</h1>
+        <small class="account-programs__subname">Pay only for your education, and recieve all the trading capital you need</small>
       </div>
     </section>
-    <section class="account-programs__desc">
+    <section class="services  services--account">
       <div class="container">
-        <div class="account-programs__flex">
-          <div class="account-programs__left">
-            <h2 class="account-programs__name  account-programs__name--small">Professional Program 2018</h2>
-            <p class="account-programs__text">The $349 INTRO program has all you need to get started: Self-Study course, live Trading Chat Room where you can learn from professional traders and follow their trades, a trading book and the eligibility to apply for a funded $14,000 trading account.</p>
-            <p class="account-programs__price">Price <b>$349</b></p>
-            <small class="account-programs__guarantee">14-Day Full Money Back Guarantee!</small>
-            <a class="button  button--small  button--green  account-programs__button" href="#">Buy Now</a>
+        <div class="services__flex">
+          <div class="services__box  services__box--intro"></div>
+          <div class="services__box  services__box--student"></div>
+          <div class="services__box  services__box--expert"></div>
+          <div class="services__box  services__box--pro"></div>
+        </div>
+        <h1 class="services__title">We will show you the way!</h1>
+        <p class="services__subtitle">Our funded trading Account programs are designed to help you become a consistently profitable trader with the best education, but without the worry of losing your own capital.</p>
+      </div>
+    </section>
+    <section class="account">
+      <div class="account__wrapper  account__wrapper--blue">
+        <div class="container">
+          <div class="account__flex">
+            <div class="account__img  account__img--intro">
+              <p><b>Intro</b> Program</p>
+            </div>
+            <div class="account__desc">
+              <b class="account__name">Description</b>
+              <p class="account__text">Tradenet's INTRO program has all you need to get started: from a Self-Study course to a live Trading Chat Room.</p>
+              <p class="account__text">Join this program and be eligible to apply for a $14,000 funded trading account with a maximum loss limit of $700, and receive 70%* of the net profits you generate.</p>
+              <b class="account__name">Program Include</b>
+              <div class="account__flex">
+                <div class="account__box  account__box--self">
+                  <p>Self-Stude<br>Course</p>
+                </div>
+                <div class="account__box  account__box--chat">
+                  <p>Live Trading<br>Chat Room</p>
+                </div>
+                <div class="account__box  account__box--book">
+                  <p>Trading<br>Book</p>
+                </div>
+                <div class="account__box  account__box--demo">
+                  <p>Demo Training<br>Account</p>
+                </div>
+              </div>
+              <a class="button  button--small  button--green  account__button" href="#">Buy Now</a>
+              <a class="button  button--small  button--transparent  account__button" href="#">Read More</a>
+            </div>
           </div>
-          <div class="account-programs__right  account-programs__right--intro"></div>
         </div>
       </div>
-    </section>
-    <section class="account-programs__edge">
-      <div class="container">
-        <div class="account-programs__flex">
-          <div class="account-programs__box  account-programs__box--self">
-            <b>Self-Study<br>Course</b>
-            <ul>
-              <li>- Online trading course</li>
-              <li>- Dozens of learning units</li>
-              <li>- Training videos</li>
-              <li>- Interactive sessions and tests</li>
-              <li>- Available 24/7</li>
-            </ul>
+      <div class="account__wrapper">
+        <div class="container">
+          <div class="account__flex">
+            <div class="account__img  account__img--student">
+              <p><b>Student</b> Program</p>
+            </div>
+            <div class="account__desc">
+              <b class="account__name">Description</b>
+              <p class="account__text">Tradenet's INTRO program has all you need to get started: from a Self-Study course to a live Trading Chat Room.</p>
+              <p class="account__text">Join this program and be eligible to apply for a $14,000 funded trading account with a maximum loss limit of $700, and receive 70%* of the net profits you generate.</p>
+              <b class="account__name">Program Include</b>
+              <div class="account__flex">
+                <div class="account__box  account__box--self">
+                  <p>Self-Stude<br>Course</p>
+                </div>
+                <div class="account__box  account__box--chat">
+                  <p>Live Trading<br>Chat Room</p>
+                </div>
+                <div class="account__box  account__box--book">
+                  <p>Trading<br>Book</p>
+                </div>
+                <div class="account__box  account__box--demo">
+                  <p>Demo Training<br>Account</p>
+                </div>
+              </div>
+              <div class="account__flex  account__flex--around">
+                <div class="account__box  account__box--mentor">
+                  <p>1-Month<br>Mentorship</p>
+                </div>
+                <div class="account__box  account__box--star">
+                  <p>Star Trader<br>Course</p>
+                </div>
+              </div>
+              <a class="button  button--small  button--green  account__button" href="#">Buy Now</a>
+              <a class="button  button--small  button--transparent  account__button" href="#">Read More</a>
+            </div>
           </div>
-          <div class="account-programs__box  account-programs__box--chat">
-            <b>Live Trading<br>Chat Room</b>
-            <ul>
-              <li>- Trade live with our top analysts</li>
-              <li>- Watch & Learn to improve your trading skills</li>
-              <li>- Copy-trade and learn better trading strategies</li>
-              <li>- 1-Month membership</li>
-            </ul>
+        </div>
+      </div>
+      <div class="account__wrapper  account__wrapper--blue">
+        <div class="container">
+          <div class="account__flex">
+            <div class="account__img  account__img--expert">
+              <p><b>Expert</b> Program</p>
+            </div>
+            <div class="account__desc">
+              <b class="account__name">Description</b>
+              <p class="account__text">Tradenet's INTRO program has all you need to get started: from a Self-Study course to a live Trading Chat Room.</p>
+              <p class="account__text">Join this program and be eligible to apply for a $14,000 funded trading account with a maximum loss limit of $700, and receive 70%* of the net profits you generate.</p>
+              <b class="account__name">Program Include</b>
+              <div class="account__flex">
+                <div class="account__box  account__box--self">
+                  <p>Self-Stude<br>Course</p>
+                </div>
+                <div class="account__box  account__box--chat">
+                  <p>Live Trading<br>Chat Room</p>
+                </div>
+                <div class="account__box  account__box--book">
+                  <p>Trading<br>Book</p>
+                </div>
+                <div class="account__box  account__box--demo">
+                  <p>Demo Training<br>Account</p>
+                </div>
+              </div>
+              <div class="account__flex  account__flex--around">
+                <div class="account__box  account__box--mentor">
+                  <p>1-Month<br>Mentorship</p>
+                </div>
+                <div class="account__box  account__box--star">
+                  <p>Star Trader<br>Course</p>
+                </div>
+                <div class="account__box  account__box--forex">
+                  <p>Forex Trader<br>Course</p>
+                </div>
+              </div>
+              <a class="button  button--small  button--green  account__button" href="#">Buy Now</a>
+              <a class="button  button--small  button--transparent  account__button" href="#">Read More</a>
+            </div>
           </div>
-          <div class="account-programs__box  account-programs__box--book">
-            <b>Trading<br>Book</b>
-            <ul>
-              <li>- “The Market Whisperer” trading book, a best seller by Meir Barak, is included in this package. You will get online access to the book in eight different languages!</li>
-            </ul>
-          </div>
-          <div class="account-programs__box  account-programs__box--demo">
-            <b>Demo Training<br>Account</b>
-            <ul>
-              <li>- Proficient in the use of the trading platform</li>
-              <li>- Get familiar with advanced trading features</li>
-              <li>- Easily test all trading platform functions</li>
-            </ul>
+        </div>
+      </div>
+      <div class="account__wrapper">
+        <div class="container">
+          <div class="account__flex">
+            <div class="account__img  account__img--pro">
+              <p><b>Pro</b> Program</p>
+            </div>
+            <div class="account__desc">
+              <b class="account__name">Description</b>
+              <p class="account__text">Tradenet's INTRO program has all you need to get started: from a Self-Study course to a live Trading Chat Room.</p>
+              <p class="account__text">Join this program and be eligible to apply for a $14,000 funded trading account with a maximum loss limit of $700, and receive 70%* of the net profits you generate.</p>
+              <b class="account__name">Program Include</b>
+              <div class="account__flex">
+                <div class="account__box  account__box--self">
+                  <p>Self-Stude<br>Course</p>
+                </div>
+                <div class="account__box  account__box--chat">
+                  <p>Live Trading<br>Chat Room</p>
+                </div>
+                <div class="account__box  account__box--book">
+                  <p>Trading<br>Book</p>
+                </div>
+                <div class="account__box  account__box--demo">
+                  <p>Demo Training<br>Account</p>
+                </div>
+              </div>
+              <div class="account__flex  account__flex--second">
+                <div class="account__box  account__box--mentor">
+                  <p>1-Month<br>Mentorship</p>
+                </div>
+                <div class="account__box  account__box--star">
+                  <p>Star Trader<br>Course</p>
+                </div>
+                <div class="account__box  account__box--forex">
+                  <p>Forex Trader<br>Course</p>
+                </div>
+                <div class="account__box  account__box--top">
+                  <p>Top Trader<br>Course</p>
+                </div>
+              </div>
+              <a class="button  button--small  button--green  account__button" href="#">Buy Now</a>
+              <a class="button  button--small  button--transparent  account__button" href="#">Read More</a>
+            </div>
           </div>
         </div>
       </div>
     </section>
   </main>
-  <section class="services  services--account-programs">
-    <div class="container">
-      <h1 class="services__title">We will show you the way!</h1>
-      <p class="services__subtitle">Our funded trading Account programs are designed to help you become a consistently profitable trader with the best education, but without the worry of losing your own capital.</p>
-      <div class="services__flex">
-        <div class="services__box  services__box--intro">
-          <p class="services__name">
-            <b>Intro</b>
-            Program
-          </p>
-          <a class="button  button--small  button--green  services__button" href="#">Buy Now</a>
-          <a class="button  button--small  button--transparent  services__button" href="#">Read More</a>
-        </div>
-        <div class="services__box  services__box--student">
-          <p class="services__name">
-            <b>Student</b>
-            Program
-          </p>
-          <a class="button  button--small  button--green  services__button" href="#">Buy Now</a>
-          <a class="button  button--small  button--transparent  services__button" href="#">Read More</a>
-        </div>
-        <div class="services__box  services__box--expert">
-          <p class="services__name">
-            <b>Expert</b>
-            Program
-          </p>
-          <a class="button  button--small  button--green  services__button" href="#">Buy Now</a>
-          <a class="button  button--small  button--transparent  services__button" href="#">Read More</a>
-        </div>
-        <div class="services__box  services__box--pro">
-          <p class="services__name">
-            <b>Pro</b>
-            Program
-          </p>
-          <a class="button  button--small  button--green  services__button" href="#">Buy Now</a>
-          <a class="button  button--small  button--transparent  services__button" href="#">Read More</a>
-        </div>
-      </div>
-    </div>
-  </section>
-  <section class="live  live--account-programs">
-    <div class="container">
-      <div class="live__box  live__box--account-programs">
-        <h1 class="live__title">Become a Funded Account Trader</h1>
-        <p class="live__text  live__text--account-programs">Pay only for your education, and have all the trading capital you need. You will be eligible to apply for a funded account of up to $240,000 and receive up to 85% of the net profits you generate. Our Funded Trading Account programs are designed to help you become a consistently profitable trader with the best education, but without the worry of losing your own capital.</p>
-        <a class="button  button--medium  live__button" href="#">Learn More</a>
-      </div>
-    </div>
-  </section>
   <section class="contact">
     <div class="container">
       <h1 class="contact__title">Like to know more?</h1>
@@ -457,7 +527,7 @@
         </ul>
         <ul class="footer__list">
           <li><b>Funded Accounts</b></li>
-          <li><a class="footer__active">Intro Program</a></li>
+          <li><a href="intro.html">Intro Program</a></li>
           <li><a href="student.html">Student Program</a></li>
           <li><a href="expert.html">Expert Program</a></li>
           <li><a href="pro.html">Pro Program</a></li>
@@ -482,8 +552,8 @@
     </div>
     <hr class="footer__hr">
     <div class="container">
-      <p class="footer__text">Tradenet is a day trading training school. We offer courses including stock trading, CFDs, options, futures and foreign exchange. At Tradenet, we specialize in providing day trading courses with inexperienced beginners and experienced traders. We offer three learning options: self-taught online courses, so you can study at home network teaching there is a unique one-on-one teaching. We also offer online real-time discussion groups and existing sub-accounts for students to choose. Most of our services have several language options, including Spanish, German, French, Russian, Hungarian, Italian, Arabic, etc.</p>
-      <p class="footer__text">All purchases are made exclusively to the merchant Tradenet for educational services. Any potential earnings or losses incurred in the funded trading sub-account have no bearing whatsoever on Tradenet as it is completely independent from Tradenet’s educational services and relevant package pricing.</p>
+      <p class="footer__text">Tradenet is a day trading training school. We offer courses including stock trading, CFDs, options, futures and foreign exchange. At Tradenet, we specialize in providing day trading courses with inexperienced beginners and experienced traders. We offer three learning options: self-taught online courses, so you can study at home network teaching there is a unique one-on-one teaching. We also offer online real-time discussion groups and existing sub-accounts for students to choose. Most of our account have several language options, including Spanish, German, French, Russian, Hungarian, Italian, Arabic, etc.</p>
+      <p class="footer__text">All purchases are made exclusively to the merchant Tradenet for educational account. Any potential earnings or losses incurred in the funded trading sub-account have no bearing whatsoever on Tradenet as it is completely independent from Tradenet’s educational account and relevant package pricing.</p>
     </div>
     <div class="footer__copyright">
       <div class="container">
