--- a/investix/account-programs/student.html
+++ b/investix/account-programs/student.html
@@ -30,7 +30,7 @@
         <nav class="nav">
           <ul class="nav__list">
             <li>
-              <a>Account Programs</a>
+              <a class="nav__active" href="account.html">Account Programs</a>
               <ul class="nav__sublist">
                 <li><a href="intro.html">Intro Program</a></li>
                 <li><a class="nav__active">Student Program</a></li>
