--- a/investix/index.html
+++ b/investix/index.html
@@ -31,7 +31,7 @@
         <nav class="nav">
           <ul class="nav__list">
             <li>
-              <a>Account Programs</a>
+              <a href="account-programs/account.html">Account Programs</a>
               <ul class="nav__sublist">
                 <li><a href="account-programs/intro.html">Intro Program</a></li>
                 <li><a href="account-programs/student.html">Student Program</a></li>
